--- a/pidgin_smiley/setup.cfg
+++ b/pidgin_smiley/setup.cfg
@@ -3,9 +3,9 @@ current_version = 0.1.0
 commit = True
 tag = True
 
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+[bumpversion:file:setup.cfg]
+search = version = '{current_version}'
+replace = version = '{new_version}'
 
 [bumpversion:file:pidgin_smiley.py]
 search = __version__ = '{current_version}'
