--- a/pidgin_smiley/setup.cfg
+++ b/pidgin_smiley/setup.cfg
@@ -7,6 +7,10 @@ tag = True
 search = version = '{current_version}'
 replace = version = '{new_version}'
 
+[bumpversion:file:setup.cfg]
+search = version = {current_version}
+replace = version = {new_version}
+
 [bumpversion:file:pidgin_smiley.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
@@ -20,7 +24,7 @@ exclude = docs
 [metadata]
 name = kupfer_plugin_pidgin_smiley
 description-file = README.rst
-version = 0.1.0
+version = 0.2.0
 summary = Index pidgin smiley theme
 author = Hugo Sena Ribeiro
 author-email = hugosenari@gmail.com
