--- a/pidgin_smiley/setup.cfg
+++ b/pidgin_smiley/setup.cfg
@@ -3,9 +3,9 @@ current_version = 0.2.1
 commit = True
 tag = True
 
-[bumpversion:file:setup.cfg]
-search = version = {current_version}
-replace = version = {new_version}
+[bumpversion:file:setup.py]
+search = version='{current_version}'
+replace = version='{new_version}'
 
 [bumpversion:file:pidgin_smiley.py]
 search = __version__ = '{current_version}'
@@ -20,7 +20,6 @@ exclude = docs
 [metadata]
 name = kupfer_plugin_pidgin_smiley
 description-file = README.rst
-version = 0.2.0
 summary = Index pidgin smiley theme
 author = Hugo Sena Ribeiro
 author-email = hugosenari@gmail.com
