--- a/pidgin_smiley/setup.cfg
+++ b/pidgin_smiley/setup.cfg
@@ -9,7 +9,7 @@ replace = version='{new_version}'
 
 [bumpversion:file:pidgin_smiley.py]
 search = __version__ = "{current_version}"
-replace = "{new_version}"
+replace = __version__ = "{new_version}"
 
 [bdist_wheel]
 universal = 1
