--- a/url_encode/Makefile
+++ b/url_encode/Makefile
@@ -85,5 +85,8 @@ dist: clean ## builds source and wheel package
 	python setup.py bdist_wheel
 	ls -l dist
 
+register: clean ## register package at pypi
+	python setup.py register
+
 install: clean ## install the package to the active Python's site-packages
 	python setup.py install
