add WIP jira plugin

--- a/jira/setup.cfg
+++ b/jira/setup.cfg
@@ -2,13 +2,13 @@
 current_version = 0.1.0
 commit = True
 tag = True
-tag_name = git_{new_version}
+tag_name = jira_{new_version}
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:git.py]
+[bumpversion:file:jira.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
@@ -19,14 +19,14 @@ universal = 1
 exclude = docs
 
 [metadata]
-name = kupfer_plugin_git
+name = kupfer_plugin_jira
 description-file = README.rst
-summary = Control your git repository with kupfer
+summary = Kupfer plugin to control Jira
 author = Hugo Sena Ribeiro
 author-email = hugosenari@gmail.com
-home-page = https://github.com/hugosenari/Kupfer-Plugins
+home-page = https://github.com/hugosenari/jira
 license = MIT license
-keywords = kupfer git
+keywords = kupfer jira
 
 classifiers = Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
