add basic Jira plugin with Show and Comment issue

--- a/jira_plugin/setup.cfg
+++ b/jira_plugin/setup.cfg
@@ -2,13 +2,13 @@
 current_version = 0.1.0
 commit = True
 tag = True
-tag_name = jira_{new_version}
+tag_name = jira_plugin_{new_version}
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:jira.py]
+[bumpversion:file:jira_plugin.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
@@ -19,14 +19,14 @@ universal = 1
 exclude = docs
 
 [metadata]
-name = kupfer_plugin_jira
+name = kupfer_plugin_jira_plugin
 description-file = README.rst
-summary = Kupfer plugin to control Jira
+summary = Kupfer plugin to control jira
 author = Hugo Sena Ribeiro
 author-email = hugosenari@gmail.com
-home-page = https://github.com/hugosenari/jira
+home-page = https://github.com/hugosenari/jira_plugin
 license = MIT license
-keywords = kupfer jira
+keywords = kupfer jira_plugin
 
 classifiers = Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
