--- a/jira_plugin/tox.ini
+++ b/jira_plugin/tox.ini
@@ -4,11 +4,11 @@ envlist = py26, py27, py33, py34, py35, flake8
 [testenv:flake8]
 basepython=python
 deps=flake8
-commands=flake8 jira
+commands=flake8 jira_plugin
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/jira
+    PYTHONPATH = {toxinidir}:{toxinidir}/jira_plugin
 
 commands = python setup.py test
 
