--- a/pidgin_smiley/setup.cfg
+++ b/pidgin_smiley/setup.cfg
@@ -2,6 +2,7 @@
 current_version = 0.2.4
 commit = True
 tag = True
+tag_name = pidgin_smiley_{new_version}
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
