--- a/restart_app/setup.cfg
+++ b/restart_app/setup.cfg
@@ -2,6 +2,7 @@
 current_version = 0.1.1
 commit = True
 tag = True
+tag_name = restart_app_{new_version}
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
