fix mpris_2 bumpversion

--- a/mpris_2/setup.cfg
+++ b/mpris_2/setup.cfg
@@ -8,7 +8,7 @@ tag_name = mpris_2_{new_version}
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:mpris2.py]
+[bumpversion:file:mpris_2.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
