--- a/folks/setup.cfg
+++ b/folks/setup.cfg
@@ -24,7 +24,7 @@ description-file = README.rst
 summary = List contacts using libfolks as source
 author = Hugo Sena Ribeiro
 author-email = hugosenari@gmail.com
-home-page = https://github.com/hugosenari/folks
+home-page = https://github.com/hugosenari/Kupfer-Plugins
 license = MIT license
 keywords = kupfer folks
 
